Task5:US10:Front-> Create profile.html

--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -24,7 +24,7 @@
         </section>
 
     </main>
-
+<script>
     // ... (ส่วน MOCK_PRODUCTS และ API ENDPOINTS เดิม) ...
     const CART_COUNT_API = '/api/cart/items/count'; // API Mock สำหรับนับจำนวน
     
@@ -119,5 +119,6 @@
         setupAddToCartHandlers(); 
         // NOTE: fetchCartCount ถูกเรียกอยู่แล้วภายใน updateHeaderAndWelcome เมื่อ login
     });
+    </script>
 </body>
 </html>
