--- a/demo/src/main/resources/static/checkout.html
+++ b/demo/src/main/resources/static/checkout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout | WEBSITE NAME</title>
     <link rel="stylesheet" href="styles.css"> 
-    <link rel="stylesheet" href="css/checkout.css"> 
+    <link rel="stylesheet" href="checkout.css"> 
 </head>
 <body>
 
@@ -36,7 +36,7 @@
                         </div>
                         <div class="payment-option">
                             <input type="radio" name="payment" value="cod" id="cod">
-                            <label for="cod">Cash on Delivery (COD)</label>
+                            <label for="cod">QR payment</label>
                             <p class="small-text">Pay upon receipt of goods</p>
                         </div>
                     </div>
