--- a/demo/src/main/resources/static/profile.html
+++ b/demo/src/main/resources/static/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Profile | WEBSITE NAME</title>
     <link rel="stylesheet" href="styles.css"> 
-    <link rel="stylesheet" href="css/profile.css"> 
+    <link rel="stylesheet" href="profile.css"> 
 </head>
 <body>
 
@@ -71,7 +71,7 @@
         linksContainer.innerHTML = `
             <a href="order-history.html" class="nav-link">Order History</a>
             <a href="profile.html" class="nav-link">${username}</a>
-            <a href="cart.html" class="nav-link cart-icon">Cart</a> 
+            <a href="cart.html" class="nav-link cart-icon">🛒</a> 
         `;
         return true;
     }
