--- a/demo/src/main/resources/static/cart.html
+++ b/demo/src/main/resources/static/cart.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart | WEBSITE NAME</title>
     <link rel="stylesheet" href="styles.css"> 
-    <link rel="stylesheet" href="css/cart.css"> 
+    <link rel="stylesheet" href="cart.css"> 
 </head>
 <body>
 
@@ -66,7 +66,7 @@
             linksContainer.innerHTML = `
                 <a href="order-history.html" class="nav-link">Order History</a>
                 <a href="profile.html" class="nav-link">${username}</a>
-                <a href="cart.html" class="nav-link cart-icon">Cart</a> 
+                <a href="cart.html" class="nav-link cart-icon">🛒</a> 
             `;
         } else {
             linksContainer.innerHTML = `
