--- a/demo/src/main/resources/static/register.html
+++ b/demo/src/main/resources/static/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register | WEBSITE NAME</title>
     <link rel="stylesheet" href="styles.css"> 
-    <link rel="stylesheet" href="css/register.css"> 
+    <link rel="stylesheet" href="register.css"> 
 </head>
 <body>
 
