--- a/demo/src/main/resources/static/checkout.html
+++ b/demo/src/main/resources/static/checkout.html
@@ -109,7 +109,7 @@
                 linksContainer.innerHTML = `
                     <a href="order-history.html" class="nav-link">Order History</a>
                     <a href="profile.html" class="nav-link">${username}</a>
-                    <a href="cart.html" class="nav-link cart-icon">Cart</a> 
+                    <a href="cart.html" class="nav-link cart-icon">🛒</a> 
                 `;
             } else {
                 window.location.href = LOGIN_PAGE; // บังคับ Login หากเข้ามาหน้า Checkout โดยตรง
