--- a/demo/src/main/resources/static/checkout.html
+++ b/demo/src/main/resources/static/checkout.html
@@ -107,8 +107,9 @@
 
             if (isLogin) {
                 linksContainer.innerHTML = `
+                    <a href="index.html" class="nav-link">HOME</a>
                     <a href="order-history.html" class="nav-link">Order History</a>
-                    <a href="profile.html" class="nav-link">${username}</a>
+                    <a href="profile.html" class="nav-link">${username} 👤</a>
                     <a href="cart.html" class="nav-link cart-icon">🛒</a> 
                 `;
             } else {
