--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -43,14 +43,14 @@
     // Hardcoded Fallback Data (ใช้ในกรณีที่ Mock JSON โหลดไม่สำเร็จ)
     // ใช้โครงสร้าง JSON ใหม่: productId, productName, stockQuantity
     const FALLBACK_PRODUCTS = [
-        { productId: 1, productName: 'Wireless Mouse', price: 450.0, stockQuantity: 30, imageUrl: '1.jpg' },
+        { productId: 1, productName: 'Wireless Mouse', price: 450.0, stockQuantity: 30, imageUrl: '7.jpg' }, 
         { productId: 2, productName: 'Mechanical Keyboard', price: 1250.0, stockQuantity: 20, imageUrl: '2.jpg' },
         { productId: 4, productName: 'Gaming Headset', price: 990.0, stockQuantity: 25, imageUrl: '4.jpg' },
         { productId: 5, productName: 'USB-C Charger 65W', price: 799.0, stockQuantity: 40, imageUrl: '5.jpg' },
-        { productId: 6, productName: '27-inch 4K Monitor', price: 8990.0, stockQuantity: 8, imageUrl: '5.jpg' },
-        { productId: 7, productName: 'Laptop Stand Adjustable', price: 650.0, stockQuantity: 18, imageUrl: '5.jpg' },
-        { productId: 8, productName: 'USB-C Charger 65W', price: 3290.0, stockQuantity: 12, imageUrl: '5.jpg' },
-        { productId: 9, productName: 'Bluetooth Speaker', price: 1150.0, stockQuantity: 22, imageUrl: '5.jpg' },
+        { productId: 6, productName: '27-inch 4K Monitor', price: 8990.0, stockQuantity: 8, imageUrl: '6.jpg' },
+        { productId: 7, productName: 'Laptop Stand Adjustable', price: 650.0, stockQuantity: 18, imageUrl: '7.jpg' },
+        { productId: 8, productName: 'External SSD 1TB', price: 3290.0, stockQuantity: 12, imageUrl: '8.jpg' },
+        { productId: 9, productName: 'Bluetooth Speaker', price: 1150.0, stockQuantity: 22, imageUrl: '9.jpg' },
     ];
 
     // ----------------------------------------------------------------
