add product-detail.html และ product-detail.css เพื่อแสดงรายละเอียดของสินค้า

--- a/demo/src/main/resources/static/login.html
+++ b/demo/src/main/resources/static/login.html
@@ -46,7 +46,7 @@
     // MOCK DATA
     const MOCK_USERNAME = 'test@example.com'; 
     const MOCK_PASSWORD = 'password';
-    const LOGIN_SUCCESS_PAGE = 'after-login.html'; // Redirect ไปหน้าหลัง Login (ตาม app.js เดิม)
+    const LOGIN_SUCCESS_PAGE = 'index.html'; // Redirect ไปหน้าหลัง Login (ตาม app.js เดิม)
 
     document.addEventListener('DOMContentLoaded', () => {
         const loginForm = document.getElementById('login-form');
