--- a/demo/src/main/resources/static/register.html
+++ b/demo/src/main/resources/static/register.html
@@ -62,7 +62,7 @@
     <script>
     // ใช้ Mock Logic แทนการ Fetch จริง
     const REGISTER_API = '/api/users/register'; 
-    const SUCCESS_REDIRECT = 'login.html'; 
+    const SUCCESS_REDIRECT = 'index.html'; 
 
     // ฟังก์ชันตรวจสอบความว่างเปล่าและแสดง alert
     function validateForm(data) {
