--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -86,9 +86,9 @@
         products.forEach(product => {
             // ใช้ชื่อฟิลด์ใหม่: productId, productName, stockQuantity
             const cardHtml = `
-        <div class="product-card" onclick="window.location.href='product-detail.html?id=${product.productId}'">
+        <div class="product-card" onclick="window.location.href='product-detail.html?id=${product.id}'">
         <div class="product-image">
-            <img src="images/${product.imageUrl || 'placeholder.png'}" alt="${product.productName}" style="width: 100%; height: auto;">
+            <img src="images/${product.id}.jpg" alt="${product.productName}" style="width: 100%; height: auto;">
         </div>
         </div>
                     <div class="product-info-grid">
@@ -97,7 +97,7 @@
                             <p class="product-price">฿ ${product.price.toLocaleString()}</p>
                             <p class="product-stock">in stock: x${product.stockQuantity || '?'}</p> 
                         </div>
-                        <button class="add-to-cart-btn" data-product-id="${product.productId}">Add</button>
+                        <button class="add-to-cart-btn" data-product-id="${product.id}">Add</button>
                     </div>
                 </div>
             `;
