ปรับ css hover effect

--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -262,7 +262,8 @@
 
     document.addEventListener('DOMContentLoaded', () => {
         updateHeaderAndWelcome();
-        fetchAndDisplayProducts(); 
+        fetchAndDisplayProducts();
+        setupAddToCartHandlers(); // Add event handlers for Add to Cart buttons
     });
 </script>
 </body>
