edit homepahe ตาม figma

--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -78,7 +78,7 @@
                 <a href="profile.html" class="nav-link">${username} 👤</a>
                 <a href="cart.html" class="nav-link cart-icon">🛒 (<span id="cart-count">${mockCartCount}</span>)</a> 
             `;
-            welcomeSection.innerHTML = `<h1>Welcome</h1><p>Discover our amazing products</p>`;
+            welcomeSection.innerHTML = `<h1>Welcome</h1><p>description</p>`;
         } else {
             linksContainer.innerHTML = `
                 <a href="${LOGIN_PAGE}" class="nav-link">login 👤</a>
