--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -81,8 +81,7 @@
             welcomeSection.innerHTML = `<h1>Welcome</h1><p>description</p>`;
         } else {
             linksContainer.innerHTML = `
-                <a href="${LOGIN_PAGE}" class="nav-link">Login</a>
-                <a href="register.html" class="nav-link">Register</a>
+                <a href="${LOGIN_PAGE}" class="nav-link">login 👤</a>
             `;
             welcomeSection.innerHTML = `<h1>Welcome</h1><p>Please login to start shopping</p>`;
         }
@@ -141,7 +140,7 @@
         }
     }
 
-    async function fetchCartCount() {
+   function fetchCartCount() {
         const countElement = document.getElementById('cart-count');
         if (!countElement) return;
         countElement.textContent = currentCartCount.toString(); 
@@ -210,6 +209,7 @@
                     
                     const totalItems = data.items.reduce((total, item) => total + item.quantity, 0);
                     sessionStorage.setItem('mockCartCount', totalItems.toString()); 
+                    currentCartCount = totalItems;
                     
                     fetchCartCount(); 
                 } else {
