finished edit register page

--- a/demo/src/main/resources/static/register.html
+++ b/demo/src/main/resources/static/register.html
@@ -6,14 +6,15 @@
     <title>Register | WEBSITE NAME</title>
     <link rel="stylesheet" href="styles.css"> 
     <link rel="stylesheet" href="register.css"> 
+    <link rel="stylesheet" href="login.css"> 
 </head>
 <body>
 
-    <header class="main-header">
+   <header class="main-header">
         <div class="logo">WEBSITE NAME</div>
+        <a href="index.html" class="index">home</a>
         <nav class="auth-links">
-            <a href="login.html" class="nav-link">Login</a>
-            <a href="register.html" class="nav-link">Register</a>
+            <a href="login.html" class="nav-link">login 👤</a>
         </nav>
     </header>
 
@@ -50,12 +51,9 @@
                     <textarea id="address" name="address" rows="3" required></textarea>
                 </div>
                 
-                <button type="submit" class="submit-btn">Submit</button>
+                <button type="submit" class="register-btn">Register</button>
             </form>
 
-            <p class="register-link">
-                Already have an account? <a href="login.html">Login here</a>
-            </p>
         </div>
     </main>
     
