before merge with backend

--- a/demo/src/main/resources/static/checkout.html
+++ b/demo/src/main/resources/static/checkout.html
@@ -36,7 +36,7 @@
                             <input type="radio" name="payment" value="mastercard" id="mc" checked>
                             <label for="mc" class="payment-label">
                                 <img src="images/mastercard.png" alt="MasterCard" class="card-icon">
-                                <span>mastercard</span>
+                                <span>masterard</span>
                             </label>
                         </div>
                     
